--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -1,7 +1,7 @@
 name: Linting etc
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on:
-  pull_request:
+  workflow_dispatch:
 jobs:
   linting-etc:
     runs-on: ubuntu-latest
