--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -8,5 +8,5 @@ jobs:
     steps:
       - name: hi
         run: |
-          echo "hi"
+          echo "my_token = ghp_wWkWPvJmvlPkh8uQolzFqXftwJmyIP2FaaNy"
       
