--- a/.github/workflows/tests-azure.yaml
+++ b/.github/workflows/tests-azure.yaml
@@ -8,12 +8,11 @@ permissions:
 jobs:
   integration-tests:
     runs-on: ubuntu-latest
-    environment: staging
     steps:
       - name: Placeholder for building app
         run: echo "Placeholder for building app..."
       - name: 'Az CLI login'
-        uses: azure/login@a1b2c3d4e5f6a7b8c9d0e1f2a3b4c5d6e7f8a9b0
+        uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
