--- a/.github/workflows/tests-azure.yaml
+++ b/.github/workflows/tests-azure.yaml
@@ -9,7 +9,7 @@ permissions:
 jobs:
   integration-tests:
     runs-on: ubuntu-latest
-    environment: staging
+    environment: nonsense
     steps:
       - name: Placeholder for building app
         run: echo "Placeholder for building app..."
