--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -14,28 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: ${{ github.event.inputs.environment }}
     steps:
-      - name: Check out repository code
-        uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.12
-      - name: Install dependencies
-        run: |
-          python -m pip install poetry
-          python -m pip install --upgrade pip
-          python -m poetry install
-      - name: Build wheel
-        run: |
-          python -m poetry build
-      - name: Upload wheel as artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: wheel
-          path: dist/*.whl
-
-
-      - name: upload wheel to server in ${{ github.event.inputs.environment }} environment
+      - name: Doing something in '${{ github.event.inputs.environment }}' environment
         env:
           SECRET: ${{ secrets.ENV_SECRET }}
           VARIABLE: ${{ vars.ENV_NAME }}
