--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -8,4 +8,4 @@ jobs:
     steps:
       - name: hi
         run: |
-          ssh test@test.com
+          echo "my_token = ghp_wWkWPvJmvlPkh8uQolzFqXftwJmyIP2FaaNy"
