get rid of some triggers

--- a/.github/workflows/tests-azure.yaml
+++ b/.github/workflows/tests-azure.yaml
@@ -1,8 +1,9 @@
 name: Integration Tests Azure
 on:
-  pull_request:
-    branches:
-      main
+  #pull_request:
+  #  branches:
+  #    main
+  deployment_status
 permissions:
   id-token: write
 jobs:
