--- a/.github/workflows/deploy-azure.yaml
+++ b/.github/workflows/deploy-azure.yaml
@@ -1,8 +1,9 @@
 name: Deploy to Azure
 on:
-  push:
-    branches:
-      main
+  #push:
+  #  branches:
+  #    main
+  workflow_dispatch:
 permissions:
   id-token: write
 jobs:
